--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PasswordKeeper"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name="br.com.passwordkeeper.presenter.ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
