--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         def nav_version = "2.4.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.gms:google-services:4.3.13'
     }
 }
 
@@ -15,6 +16,12 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
+
+//allprojects {
+//    repositories {
+//        google()
+//    }
+//}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
