fix: colocando animação no layout do signUpCongrats

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     //Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
+    //Animation
+    implementation "com.airbnb.android:lottie:3.4.0"
+
 }
